IE browser issue form alignment issue fix + react member

--- a/docroot/react/src/views/guest-authentication/guest-authentication.less
+++ b/docroot/react/src/views/guest-authentication/guest-authentication.less
@@ -113,7 +113,7 @@
 
             .login-form {
                 margin: 0 auto;
-
+                min-height: 15.625rem;
                 .form-group {
                     .label {
                         font-size: .8125rem;
